# chess-club-admin-system

./: README.md  pyproject.toml
configs/: config.yml  configs.yml
csv_files/devon-chess/: members.csv
csv_files/tgbe-office-for-planning-and-preparation/: members.csv
csv_files/the-great-british-empire/: members.csv
resources/: countries.csv
src/: cli.py  csv_utils.py  database_utils.py  functions.py  membership.py  structures.py
src/commands/: config.py  membership.py  recruitment.py
src/utils/: alchemy.py  alchemy_enums.py  classes.py  config_structures.py  constants.py  csv_utils.py  data_structures.py  database_utils.py  dataclass_wizard_utils.py  functions.py  structures.py
