[tool.poetry]
name = "chess-club-admin-system"
version = "0.0.1"
description = "automating data-related tasks of chess.com club management"
authors = ["Wallace <yuzhuo.w@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_club_admin_system"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
