[tool.poetry]
name = "chess-club-admin-system"
version = "0.0.1"
description = "automating chess.com club admin tasks"
authors = ["Wallace <yuzhuo.w@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
click = "^8.1.3"
types-requests = "^2.28.11.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
