[tool.poetry]
name = "chess-club-admin-system"
version = "0.0.1"
description = "automating chess.com club admin tasks"
authors = ["Wallace <yuzhuo.w@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.3.0"
click = "^8.1.3"
requests = "^2.31.0"
types-requests = "^2.28.11.17"
dataclass-wizard = "0.22.2"
pyyaml = "^6.0"
sqlalchemy = "^2.0.20"

[tool.poetry.scripts]
ccas = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
